<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="made_with_text">Made with ♥ by SHabaj-dev</string>
    <string name="player_one">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="start_game">Start Game</string>
    <string name="please_enter_players_name">Please Enter Players Name</string>
    <string name="enter_first_player_name">Enter First Player Name</string>
    <string name="enter_second_player_name">Enter Second Player Name</string>
    <string name="your_message_here">Your Message Here</string>
    <string name="play_again">Play Again!</string>
</resources>